[tool.poetry]
name = "python-web-framework"
version = "0.1.0"
description = ""
authors = ["GabsMarcelino <gmarcelino@tractian.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
yarl = "^1.9.4"
httptools = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
